welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:29: error: object java.lang.String is not a value
	return String
               ^